2002-01-17  Sam Steingold  <sds@gnu.org>

	* stream.d (read-byte): respect the unread chars
	(stream_reset_eltype): new function - rectify the
	ignore_next_LF lossage when changing STREAM-ELEMENT-TYPE
	(BUILT-IN-STREAM-SET-ELEMENT-TYPE, SET-STREAM-EXTERNAL-FORMAT): use it
	(resolve_synonym_stream): new function
	(TERMINAL-RAW, check_open_file_stream): use it

2002-01-16  Sam Steingold  <sds@gnu.org>

	* inspect.lisp (close) [html-stream-out]: new method
	(*with-html-output-doctype*): new user variable, defaults to XHTML
	(with-html-output): use it; close the HTML stream too
	(crlf): removed (we create an :EXTERNAL-FORMAT :DOS socket)
	(with-http-output): new keyword args: RETURN-NAME and RETURN-CODE
	do not call CRLF, rely on the socket to provide proper EOL
	(http-error): new function
	(http-command): reconnect when a KEEP-ALIVE connection times out;
	handle invalid requests (e.g., for favicon.ico) and ":"->"%3a"
	[FIXME: disabled KEEP-ALIVE connections because it appears that
	 content length in WITH-HTTP-OUTPUT is computed incorrectly]
	(inspect-frontend) [http]: handle NIL ID returned by HTTP-COMMAND
	due to an invalid request

2002-01-16  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-stream-flush-buffer, stream-line-column)
	(stream-start-line-p): check the return value of
	SYS::LINE-POSITION (it may be NIL!)

2002-01-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OGETTEXT): mark as GC-unsafe
	* package.d (cerror_package_locked): fixed a GC-safety bug

2002-01-15  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (with-standard-io-syntax): bind
	SYSTEM::*PRIN-LINE-PREFIX* to NIL

2002-01-15  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe): flush the pending output _before_
	increasing indentation
	(describe-object) [symbol]: handle unbound special variables too

2002-01-14  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (*system-package-list*): new custom variable
	(without-package-lock): new extension macro