@@ -1,3 +1,14 @@
+2002-01-18  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (SOCKET-STATUS): fix a GC safety bug
+	(handle_isset): mark as GC-unsafe
+	Reported by Todd Sabin <tas@webspan.net>
+
+2002-01-18  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (FILE-POSITION): work on any stream, not just an open
+	file stream, as per ANSI CL
+
 2002-01-17  Sam Steingold  <sds@gnu.org>
 
 	* stream.d (read-byte): respect the unread chars
